--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,9 +1,22 @@
+# syntax=docker/dockerfile:1
+
+# Builder phase
+FROM ubuntu:22.04 as builder
+
+RUN ["apt", "update"]
+RUN ["apt", "install", "-y", "wget"]
+
+CMD ["bash"]
+
+RUN wget https://github.com/paritytech/polkadot/releases/download/v0.9.25/polkadot
+
+# Running image 
 FROM ubuntu:22.04
 
 WORKDIR /data
 
-RUN ["wget", "https://github.com/paritytech/polkadot/releases/download/v0.9.25/polkadot"]
-RUN ["chmod", "+x", "./polkadot"]
+COPY --from=builder  /polkadot .
+RUN chmod +x ./polkadot
 
 ENV RUST_BACKTRACE=1
 ENV SNAP_MODE=false
