fix/fixing pruning on init.sh and updating polkadot version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   node:
-    image: senseinode/polkadot:latest
+    image: senseinode/polkadot:with-snap-latest
     restart: unless-stopped
     ports:
       - 9933:9933
